nautilus test/training_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: test-svc-dexter
  name: test-svc-dexter
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: tutorial-pod-dexter
  type: ClusterIP
